--- a/residual.html
+++ b/residual.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Residual Graph Visualizer (FIXED)</title>
+    <title>Residual Graph Visualizer</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
