--- a/maxflow.html
+++ b/maxflow.html
@@ -35,6 +35,7 @@
         <a href="maxflow.html" class="font-semibold">Visualizer</a>
         <a href="residual.html">Residual</a>
         <a href="theorems.html">Theorems</a>
+        <a href="complexity.html">Complexity</a>
       </div>
     </div>
     <button id="dark-mode-toggle" class="p-2 rounded text-gray-400 hover:bg-gray-200 dark:hover:bg-gray-700">
@@ -1230,4 +1231,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 </body>
+
 </html>
