--- a/residual.html
+++ b/residual.html
@@ -74,7 +74,7 @@
 
 <div class="container mx-auto p-4">
     <header class="text-center my-8">
-        <h1 class="text-4xl font-bold">Understanding Residual Graphs (FIXED)</h1>
+        <h1 class="text-4xl font-bold">Understanding Residual Graphs</h1>
         <p class="text-lg text-gray-600 dark:text-gray-400">See how finding augmenting paths increases flow</p>
     </header>
 
