added navigation to other pages

--- a/maxflow.html
+++ b/maxflow.html
@@ -32,6 +32,25 @@
     <div class="flex items-center space-x-4">
       <span class="text-xl font-bold text-blue-600 dark:text-blue-400">Max-Flow Hub</span>
       <div class="hidden md:flex space-x-3 text-sm text-gray-600 dark:text-gray-300">
+        <a href="index.html">Home</a>
+        <a href="maxflow.html" class="font-semibold">Visualizer</a>
+        <a href="residual.html">Residual</a>
+        <a href="theorems.html">Theorems</a>
+        <a href="complexity.html">Complexity</a>
+      </div>
+    </div>
+    <button id="dark-mode-toggle" class="p-2 rounded text-gray-400 hover:bg-gray-200 dark:hover:bg-gray-700">
+      <svg id="theme-icon-light" class="h-6 w-6 hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1M20.354 15.354A9 9 0 118.646 3.646 9.003 9.003 0 0020.354 15.354z"></path></svg>
+      <svg id="theme-icon-dark" class="h-6 w-6" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1M4 12H3m18 0h-1"></path></svg>
+    </button>
+  </div>
+</nav>
+
+<nav class="bg-white dark:bg-gray-800 shadow sticky top-0 z-40">
+  <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
+    <div class="flex items-center space-x-4">
+      <span class="text-xl font-bold text-blue-600 dark:text-blue-400">Max-Flow Hub</span>
+      <div class="hidden md:flex space-x-3 text-sm text-gray-600 dark:text-gray-300">
         <a href="#" class="font-semibold">Visualizer</a>
       </div>
     </div>
